(dirs commands example src tests)

(install
 (section bin)
 (package reshowcase)
 (files
  commands/demo-template.html
  commands/favicon.png
  commands/reshowcase
  commands/ui-template.html))

(rule
 (alias start-example)
 (deps
  %{bin:demo-template.html}
  %{bin:favicon.png}
  %{bin:reshowcase}
  %{bin:ui-template.html}
  (alias ./example/example))
 (action
  (run
   %{bin:reshowcase}
   start
   --entry=%{project_root}/example/example/example/Demo.js)))

(rule
 (alias build-example)
 (deps
  %{bin:demo-template.html}
  %{bin:favicon.png}
  %{bin:reshowcase}
  %{bin:ui-template.html}
  (alias ./example/example))
 (action
  (run
   %{bin:reshowcase}
   build
   --entry=%{project_root}/example/example/example/Demo.js
   --output=./build)))
